--- a/package.json
+++ b/package.json
@@ -1,60 +1,95 @@
 {
-  "name": "frogger",
-  "displayName": "frogger",
-  "publisher": "Bluesteel Software",
-  "description": "jump cursor using single character searching line 'f' in vim",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.92.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": ["onStartupFinished"],
-  "main": "./extension.js",
-  "contributes": {
-    "keybindings": [
-      {
-        "key": "cmd+j",
-        "command": "frogger.jump"
-      },
-      {
-        "key": "cmd+i",
-        "command": "frogger.toggleInsertCursor",
-        "when": "FroggerIsViewable"
-      },
-      {
-        "key": "cmd+l",
-        "command": "frogger.toggleSelectToMatch",
-        "when": "FroggerIsViewable"
-      },
-      {
-        "key": "cmd+k",
-        "command": "frogger.toggleSearchBackwards",
-        "when": "FroggerIsViewable"
-      },
-      {
-        "key": "cmd+j",
-        "command": "-workbench.action.togglePanel"
-      }
+    "name": "frogger",
+    "displayName": "frogger",
+    "publisher": "Bluesteel Software",
+    "description": "jump cursor using single character searching line 'f' in vim",
+    "version": "0.0.1",
+    "engines": {
+        "vscode": "^1.92.0"
+    },
+    "categories": [
+        "Other"
     ],
-    "commands": [{
-      "command": "frogger.jump",
-      "title": "Jump to character ..."
-    }]
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "vscode-test"
-  },
-  "devDependencies": {
-    "@types/vscode": "^1.92.0",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "20.x",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
-  }
+    "activationEvents": [
+        "onStartupFinished"
+    ],
+    "main": "./extension.js",
+    "contributes": {
+        "keybindings": [
+            {
+                "key": "cmd+j",
+                "command": "frogger.jump"
+            },
+            {
+                "key": "cmd+i",
+                "command": "frogger.toggleInsertCursor",
+                "when": "FroggerIsViewable"
+            },
+            {
+                "key": "cmd+l",
+                "command": "frogger.toggleSelectToMatch",
+                "when": "FroggerIsViewable"
+            },
+            {
+                "key": "cmd+k",
+                "command": "frogger.toggleSearchBackwards",
+                "when": "FroggerIsViewable"
+            },
+            {
+                "key": "cmd+j",
+                "command": "-workbench.action.togglePanel"
+            }
+        ],
+        "commands": [
+            {
+                "command": "frogger.jump",
+                "title": "Jump to character ..."
+            }
+        ],
+        "configuration": {
+            "type": "object",
+            "title": "Frogger Settings",
+            "properties": {
+                "frogger.insertCursorBeforeByDefault": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to insert the cursor before the matched character by default"
+                },
+                "frogger.selectToMatchByDefault": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to select all from the current cursor position to the matched character by default"
+                },
+                "frogger.searchBackwardsByDefault": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to search from the cursor backwards by default"
+                },
+                "frogger.copyToClipboardOnSelect": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to copy the selected value to the clipboard automatically when selectToMatch is used"
+                },
+                "frogger.wrapSearch": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to wrap the search for characters back around the file"
+                }
+            }
+        }
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "pretest": "npm run lint",
+        "test": "vscode-test"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.92.0",
+        "@types/mocha": "^10.0.7",
+        "@types/node": "20.x",
+        "eslint": "^8.57.0",
+        "typescript": "^5.4.5",
+        "@vscode/test-cli": "^0.0.9",
+        "@vscode/test-electron": "^2.4.0"
+    }
 }
